[package]
name = "rvk"
version = "0.1.0"
authors = ["Laszlo Agocs <laszlo.agocs@qt.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.4.2"
const-cstr = "0.3.0"
bitflags = "1.2.1"
winit = "0.23.0"
ash = "0.31.0"
ash-window = "0.4"
vk-mem = "0.2.2"
nalgebra-glm = "0.9.0"
